# ProjetVisionNumerique

./: .gitignore  README.md  pyproject.toml  settings.yaml
myapp/: main.py  settings.yaml
myapp/engines/: Example.py  yolo_engine.py
myapp/processing/: Example.py  base.py  hand_mediapipe.py  hand_yolo.py
myapp/ui/: help_dialog.py  log_viewer.py  main_window.py  metrics_dialog.py  settings_dialog.py  video_window.py
myapp/utils/: config.py  logger.py  metrics.py  plugin_loader.py
myapp/video/: camera.py  video_player.py
myapp/yolo_model/: model_test.py
videos/: README.md
