[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myapp"
version = "0.1.0"
description = "App PySide6 webcam + MediaPipe (détection de mains et reconnaissance de gestes)"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.5",
  "opencv-python>=4.8,<4.10",
  "PyYAML>=6.0",
  "mediapipe>=0.10.0",
  "numpy<2",
  "matplotlib>=3.7.0"
]

[project.scripts]
myapp = "myapp.main:main"

[tool.setuptools]
packages = ["myapp"]

[tool.setuptools.package-data]
myapp = ["resources/*", "settings.yaml"]