[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myapp"
version = "0.1.0"
description = "App PySide6 webcam + YOLO (mains) modulaire"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.5",
  "opencv-python>=4.10.0",
  "PyYAML>=6.0",
  "ultralytics>=8.2",
  "matplotlib>=3.7.0",
  "numpy>=2.0.0,<2.3.0",
  "Pillow>=10.0.0"
]

[project.scripts]
myapp = "myapp.main:main"
